--- a/index.html
+++ b/index.html
@@ -25,21 +25,22 @@
       max-width: 80%;
       border-radius: 15px;
       box-shadow: 0 0 25px rgba(255, 0, 100, 0.4);
+      margin-bottom: 20px;
     }
     audio {
-      display: none;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
   <h1>Happy Girlfriend Day, Fatima! 💖</h1>
-  <p>The little I know about you is amazing and I cherish that. I love you so much! 💘</p>
+  <p>You make life more beautiful and I'm grateful to have YOU as my girlfriend. I love you! 💘</p>
 
   <img src="fatima.jpg" alt="Fatima looking beautiful">
 
-  <audio autoplay loop>
+  <audio controls>
     <source src="angel.mp3" type="audio/mpeg">
-    Your browser does not support audio.
+    Your browser does not support the audio element.
   </audio>
 </body>
 </html>
