--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <h1>Happy Girlfriend Day, Fatima! 💖</h1>
   <p>You make life more beautiful and I'm grateful to have YOU as my girlfriend. I love you! 💘</p>
 
-  <img src="fatima.jpg" alt="Fatima looking beautiful">
+  <img src="fatima.jpeg" alt="Fatima looking beautiful">
 
   <audio controls>
     <source src="angel.mp3" type="audio/mpeg">
