--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
       margin-bottom: 2em;
     }
     img {
-      width: 300px;
-      max-width: 80%;
-      border-radius: 15px;
-      box-shadow: 0 0 25px rgba(255, 0, 100, 0.4);
-      margin-bottom: 20px;
-    }
+  display: block;
+  max-width: 100%;
+  height: auto;
+  margin: 20px auto;
+  border-radius: 15px;
+  box-shadow: 0 0 25px rgba(255, 0, 100, 0.4);
+}
     audio {
       margin-top: 20px;
     }
