--- a/index.html
+++ b/index.html
@@ -11,37 +11,87 @@
       text-align: center;
       padding: 40px;
       color: #a3003d;
+      overflow: hidden;
+      position: relative;
     }
+
     h1 {
       font-size: 3em;
       margin-bottom: 0.5em;
     }
+
     p {
       font-size: 1.5em;
       margin-bottom: 2em;
     }
-    img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin: 20px auto;
-  border-radius: 15px;
-  box-shadow: 0 0 25px rgba(255, 0, 100, 0.4);
-}
+
     audio {
       margin-top: 20px;
+    }
+
+    /* Heart animation */
+    .heart {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: red;
+      transform: rotate(45deg);
+      animation: float 6s linear infinite;
+      opacity: 0.6;
+    }
+
+    .heart::before,
+    .heart::after {
+      content: "";
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background: red;
+      border-radius: 50%;
+    }
+
+    .heart::before {
+      top: -10px;
+      left: 0;
+    }
+
+    .heart::after {
+      left: -10px;
+      top: 0;
+    }
+
+    @keyframes float {
+      0% {
+        transform: translateY(100vh) rotate(45deg);
+        opacity: 0.6;
+      }
+      100% {
+        transform: translateY(-10vh) rotate(45deg);
+        opacity: 0;
+      }
     }
   </style>
 </head>
 <body>
   <h1>Happy Girlfriend Day, Fatima! 💖</h1>
-  <p>You make life more beautiful and I'm grateful to have YOU as my girlfriend. I love you! 💘</p>
-
-  <img src="fatima.jpeg" alt="Fatima looking beautiful">
+  <p>You make life more beautiful and I cherish having YOU as my girlfriend. I love you so much! 💘</p>
 
   <audio controls>
     <source src="angel.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+
+  <!-- Generate multiple floating hearts -->
+  <script>
+    const numHearts = 20;
+    for (let i = 0; i < numHearts; i++) {
+      const heart = document.createElement('div');
+      heart.className = 'heart';
+      heart.style.left = Math.random() * 100 + 'vw';
+      heart.style.animationDuration = 4 + Math.random() * 6 + 's';
+      heart.style.animationDelay = Math.random() * 5 + 's';
+      document.body.appendChild(heart);
+    }
+  </script>
 </body>
 </html>
