--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   </style>
 </head>
 <body>
-  <h1>Happy Girlfriend Day, Fatima! 💖</h1>
-  <p>You make life more beautiful and I cherish having YOU as my girlfriend. I love you so much! 💘</p>
+  <h1>Happy Love Day, Fatima! 💖</h1>
+  <p>You are more beautiful than life itself and I love having YOU as my girlfriend. I love you so much pookies! </p>
 
   <audio controls>
     <source src="angel.mp3" type="audio/mpeg">
